tests/ui/unsized/maybe-bounds-where.stderr
error[E0658]: `?Trait` bounds are only permitted at the point where a type parameter is declared
  --> $DIR/maybe-bounds-where.rs:1:28
   |
LL | struct S1<T>(T) where (T): ?Sized;
   |                            ^^^^^^
   |
   = help: add `#![feature(more_maybe_bounds)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `?Trait` bounds are only permitted at the point where a type parameter is declared
  --> $DIR/maybe-bounds-where.rs:4:27
   |
LL | struct S2<T>(T) where u8: ?Sized;
   |                           ^^^^^^
   |
   = help: add `#![feature(more_maybe_bounds)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `?Trait` bounds are only permitted at the point where a type parameter is declared
  --> $DIR/maybe-bounds-where.rs:7:35
   |
LL | struct S3<T>(T) where &'static T: ?Sized;
   |                                   ^^^^^^
   |
   = help: add `#![feature(more_maybe_bounds)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `?Trait` bounds are only permitted at the point where a type parameter is declared
  --> $DIR/maybe-bounds-where.rs:12:34
   |
LL | struct S4<T>(T) where for<'a> T: ?Trait<'a>;
   |                                  ^^^^^^^^^^
   |
   = help: add `#![feature(more_maybe_bounds)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `?Trait` bounds are only permitted at the point where a type parameter is declared
  --> $DIR/maybe-bounds-where.rs:21:21
   |
LL |     fn f() where T: ?Sized {}
   |                     ^^^^^^
   |
   = help: add `#![feature(more_maybe_bounds)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: relaxing a default bound only does something for `?Sized`; all other traits are not bound by default
  --> $DIR/maybe-bounds-where.rs:12:34
   |
LL | struct S4<T>(T) where for<'a> T: ?Trait<'a>;
   |                                  ^^^^^^^^^^

error[E0203]: type parameter has more than one relaxed default bound, only one is supported
  --> $DIR/maybe-bounds-where.rs:16:33
   |
LL | struct S5<T>(*const T) where T: ?Trait<'static> + ?Sized;
   |                                 ^^^^^^^^^^^^^^^   ^^^^^^
   |
   = help: add `#![feature(more_maybe_bounds)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: relaxing a default bound only does something for `?Sized`; all other traits are not bound by default
  --> $DIR/maybe-bounds-where.rs:16:33
   |
LL | struct S5<T>(*const T) where T: ?Trait<'static> + ?Sized;
   |                                 ^^^^^^^^^^^^^^^

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0203, E0658.
For more information about an error, try `rustc --explain E0203`.
